Разметка главной страницы и каталога

--- a/index.html
+++ b/index.html
@@ -1,133 +1,199 @@
 !DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Device</title>
+  <meta charset="UTF-8">
+  <title>Device</title>
 </head>
 <body>
+
 <header class="main-header">
-<nav class="main-navigation">
-<a class="main-header-logo">
-<img class="img-logo" width="175" height="45" alt="Логотип магазина "Device"></a>
-<ul class="user-navigation">
-<li><a href="index.html">Поиск по сайту</a></li>
-<li><a class="site-navigation" href="#">Найти</a></li>
-<li class="login-link" >
-<a class="button-login-link" href="#"> Войти</a></li>
-<li class="compare">
-<a class="button-compare" href="#"> Сравнить</a></li>
-<li class="basket" href="#">
-<a class="button-basket" href="#" > Корзина </a></li>
-</ul>
-<ul class="catalog">
-<li><a class="catalog " href="#"> Каталог товаров </a></li>
-</nav></header>
+
+  <nav class="main-navigation">
+
+    <a class="main-header-logo">
+      <img src="img-logo.svg" width="175" height="45" alt="Логотип магазина Device">
+    </a>
+    <ul class="user-navigation">
+      <li><a href="index.html">Поиск по сайту</a>
+      </li>
+      <li><a href="site-navigation.html">Найти</a>
+      </li>
+      <li><a href="link.html">Войти</a>>
+      </li>
+      <li><a href="compare.html">Сравнить</a>>
+      </li>
+      <li><a href="basket.html">Корзина</a>
+      </li>
+    </ul>
+    <ul class="site-navigation">
+      <li><a href="catalog.html">Каталог товаров</a>
+      </li>
+      <li><a href="warranty.html">Гарантия</a>
+      </li>
+      <li><a href="delivery.html">Доставка</a>
+      </li>
+      <li><a href="contacts.html">Контакты</a>
+      </li>
+    </ul>
+  </nav>
+</header>
 <main class="container">
   <h1>Делай селфи , как Бен Стиллер</h1>
-<ul class="feature-list">
-<li><a class="feature-list">
-<img src="selfi-stick" width="450" height="500" alt="selfi-stick"></a></li></ul>
-<p>Самая длиная палка для селфи доступна в нашем магазине.
-   Восемь (Восемь , Карл !) метров
-   в длинну и 5 кг веса! </p>
-        <ul class="navigation-information">
-        <li><a href="information-about.html">Подробнее</a></li></ul>
-        <b>8,5 м</b>
-        <p>Длинна палки</p>
-        <b>5 кг</b>
-        <p>Вес палки</p>
-        <b>Карбон</b>
-        <p>Материал</p>
+  <ul class="feature-list">
+    <li><a class="feature-list">
+      <img src="selfi-stick.jpg" alt="Селфи - палка" height="500" width="450">
+    </a>
+    </li>
+  </ul>
+  <p>Самая длиная палка для селфи доступна в нашем магазине.
+    Восемь (Восемь , Карл !) метров
+    в длинну и 5 кг веса! </p>
+  <ul class="navigation-information">
+    <li>
+      <a href="information-about.html">Подробнее</a>
+    </li>
+  </ul>
+  <b>8,5 м</b>
+  <p>Длинна палки</p>
+  <b>5 кг</b>
+  <p>Вес палки</p>
+  <b>Карбон</b>
+  <p>Материал</p>
+
 
   <section class="main-menu-navigation-user">
-  <h3 class="vesually-hidden">Каталог товаров</h3>
-  <nav class="main-menu-navigation">
-    <ul class="main-menu-user-navigation">
-    <li><a  href="virtual-reality">Вирутальная реальность</a></li>
-    <li><a  href="selfi-stick"> Моноподы для селфи </a></li>
-    <li><a  href="camera"> Экшн камеры</a></li>
-    <li><a  href="ifit"> Фитнес браслеты </a></li>
-    <li><a  href="iclock"> Умные часы </a></li>
-    <li><a href="quadcopter"> Квадрокоптеры</a></li>
-    </ul>
+    <h3 class="vesually-hidden">Каталог товаров</h3>
+    <nav class="main-menu-navigation">
+      <ul class="catalog-list">
+        <li>
+          <a href="virtual-reality">Вирутальная реальность</a></li>
+        <li>
+          <a href="selfi-stick"> Моноподы для селфи </a></li>
+        <li>
+          <a href="camera"> Экшн камеры</a></li>
+        <li>
+          <a href="ifit"> Фитнес браслеты </a></li>
+        <li>
+          <a href="iclock"> Умные часы </a></li>
+        <li>
+          <a href="quadcopter"> Квадрокоптеры</a></li>
+      </ul>
+    </nav>
+  </section>
 
- <section class="delivery-warranty-credit-menu">
-  <h4>Доставка</h4>
-  <ul class="delivery">
-  <li><a href="delivery">Доставка</a></li></ul>
-  <ul class="warranty">
-  <li><a href="garant" >Гарантия</a></li></ul>
-  <ul class="credit">
-  <li><a href="credit" >Кредит </a></li></ul>
-  <p> Мы с удовльствием доставим ваш товар прямо к вашему подьезду совершенно бесплатно!
-      Ведь мы неплохо заработаем, поднимая его на ваш этаж</p></li>
+  <section class="delivery-warranty-credit-menu">
+    <h4>Доставка</h4>
+    <ul class="delivery">
+      <li>
+        <a href="delivery">Доставка</a></li>
+    </ul>
+    <ul class="warranty">
+      <li>
+        <a href="garant">Гарантия</a></li>
+    </ul>
+    <ul class="credit">
+      <li>
+        <a href="credit">Кредит</a></li>
+    </ul>
+    <p> Мы с удовльствием доставим ваш товар прямо к вашему подьезду совершенно бесплатно!
+      Ведь мы неплохо заработаем, поднимая его на ваш этаж</p>
   </section>
 
   <section class="partners">
-  <h5 class="visually-hidden-partners">Парнтеры</h5>
-  <ul class="partners" >
-  <li><a class="djj" href="#">DJJ</a></li>
-  <li><a class="spadgets" href="#">SPAdgets</a></li>
-  <li><a class="gopro" href="#">GoPRO</a></li>
-  <li><a class="vive" href="#">VIVE</a></li>
- </ul>
- </section>
+    <h5 class="visually-hidden-partners">Парнтеры</h5>
+    <ul class="partners__list">
+      <li>
+        <a class="partner-link__djj" href="#">DJJ</a></li>
+      <li>
+        <a class="patrner-link__spadgets" href="#">SPAdgets</a></li>
+      <li>
+        <a class="partners-link__GoPRO" href="#">GoPRO</a></li>
+      <li>
+        <a class="partners-link__vive" href="#">VIVE</a></li>
+    </ul>
+  </section>
 
- <section class="about-us">
-  <h2>О нас</h2>
-  <p> Огромный выбор гаджетов не оставит равнодушным гика,
+  <section class="about-us">
+    <h2>О нас</h2>
+    <p> Огромный выбор гаджетов не оставит равнодушным гика,
       который есть в каждом из нас </p>
-  <p> Мы можем доставить ваш товар в самые отдаленые точки России!
-      Device работает со многими транспортными компаниями <p>
-  <ul class="transport-comapny">
-  <li><b>Деловые линии</b></li>
-  <li><b>Автотрейдинг</b></li>
-  <li><b>ЖелДорЭкспедиция</b></li>
-  </ul>
-  <ul class="about-us">
-  <li><a class="about-us" href="#"> Подробнее о нас </a></li></ul>
- </section>
- <section class="Contacts" >
- <h2>Контакты</h2>
- <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
-    проверить работоспособность покупки. Всякое бывает.</p>
- <ul class="map-index">
- <li><a href="#"><img src="img/map.jpg" width="560" height="220" alt="Карта"></a>
- <li><a class="writeme" href="#">Напишите нам</a></li>
- </ul></section>
-
- <footer class="footer-main">
-  <section class="Device-section-address" >
-  <a> Device </a>
-  <p> г.Москва , Улица строителей , 15 </p>
-</section>
-
-<section class="footer-delivey-warranty-contact">
-  <div class="footer-deliver-warranty-Contacts"><ul>
-  <li><a href="#">Доставка</a></li>
-  <li><a href="#">Гарантия</a></li>
-  <li><a href="#">Контакты</a></li></ul></div>
+    <p> Мы можем доставить ваш товар в самые отдаленые точки России!
+      Device работает со многими транспортными компаниями
+    <p>
+    <ul class="transport-comapny">
+      <li><b>Деловые линии</b></li>
+      <li><b>Автотрейдинг</b></li>
+      <li><b>ЖелДорЭкспедиция</b></li>
+    </ul>
+    <ul class="about-us">
+      <li>
+        <a class="about-us" href="#"> Подробнее о нас </a>
+      </li>
+    </ul>
   </section>
 
-  <section class="footer-social" >
-  <div class="footer-social"><ul>
-   <li><a class="social-button" href="#">facebook.com</a></li>
-   <li><a class="social-button" href="#">twitter.com</a></li>
-   <li><a class="social-button" href="#">instagram.com</a></li>
-  </ul></div>
+  <section class="Contacts">
+    <h2>Контакты</h2>
+    <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
+      проверить работоспособность покупки. Всякое бывает.</p>
+    <ul class="map-index">
+      <li>
+        <a href="#"><img src="img/map.jpg" width="560" height="220" alt="Карта"></a>
+      <li>
+        <a class="write-me" href="#">Напишите нам</a></li>
+    </ul>
+  </section>
+</main>
+
+<footer class="footer-main">
+  <section class="Device-section-address">
+    <a> Device </a>
+    <p> г.Москва , Улица строителей , 15 </p>
   </section>
 
- <section class="footer-user-navigation">
-  <div class="footer-user-navigation"><ul>
-  <li><a class="footer-button-login" href="#">Войти</a></li>
-  <li><a class="footer-button-compare" href="#">Сравнить</a></li>
-  <li><a class="footer-button-basket" href="#">Корзина</a></li>
-    </ul></div>
+  <section class="footer-delivey-warranty-contact">
+    <div class="footer-deliver-warranty-Contacts">
+      <ul>
+        <li>
+          <a href="#">Доставка</a></li>
+        <li>
+          <a href="#">Гарантия</a></li>
+        <li>
+          <a href="#">Контакты</a></li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="footer-social">
+    <div class="footer-social">
+      <ul>
+        <li>
+          <a class="social-button" href="#">facebook.com</a></li>
+        <li>
+          <a class="social-button" href="#">twitter.com</a></li>
+        <li>
+          <a class="social-button" href="#">instagram.com</a></li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="footer-user-navigation">
+    <div class="footer-user-navigation">
+      <ul>
+        <li>
+          <a class="footer-button-login" href="#">Войти</a></li>
+        <li>
+          <a class="footer-button-compare" href="#">Сравнить</a></li>
+        <li>
+          <a class="footer-button-basket" href="#">Корзина</a></li>
+      </ul>
+    </div>
     <p>Тел.:+7(495)495-95-95</p>
     <p class="footer-copyright">
-    <b>Разработано:</b>
-    <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-     </p>
-        </footer>
+      <b>Разработано:</b>
+      <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+    </p>
+  </section>
+</footer>
 </body>
 </html>
