Очередной раз поправил

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,6 @@
   <title>Device</title>
 </head>
 <body>
-
 <header class="main-header">
   <nav class="main-navigation">
     <a class="main-header-logo">
@@ -13,34 +12,25 @@
     </a>
     <ul class="user-navigation">
       <li>
-        <a href="index.html">Поиск по сайту</a>
-      </li>
+        <a href="index.html">Поиск по сайту</a></li>
       <li>
-        <a href="site-navigation.html">Найти</a>
-      </li>
+        <a href="site-navigation.html">Найти</a></li>
       <li>
-        <a href="link.html">Войти</a>>
-      </li>
+        <a href="link.html">Войти</a></li>
       <li>
-        <a href="compare.html">Сравнить</a>>
-      </li>
+        <a href="compare.html">Сравнить</a></li>
       <li>
-        <a href="basket.html">Корзина</a>
-      </li>
+        <a href="basket.html">Корзина</a></li>
     </ul>
     <ul class="site-navigation">
       <li>
-        <a href="catalog.html">Каталог товаров</a>
-      </li>
+        <a href="catalog.html">Каталог товаров</a></li>
       <li>
-        <a href="warranty.html">Гарантия</a>
-      </li>
+        <a href="warranty.html">Гарантия</a></li>
       <li>
-        <a href="delivery.html">Доставка</a>
-      </li>
+        <a href="delivery.html">Доставка</a></li>
       <li>
-        <a href="contacts.html">Контакты</a>
-      </li>
+        <a href="contacts.html">Контакты</a></li>
     </ul>
   </nav>
 </header>
@@ -48,14 +38,11 @@
   <h1 class="page-title">Моноподы для селфи</h1>
   <ul class="breadcrumbs">
     <li>
-      <a href="index.html">Главная</a>
-    </li>
+      <a href="index.html">Главная</a></li>
     <li>
-      <a href="catalog.html">Каталог товаров</a>
-    </li>
+      <a href="catalog.html">Каталог товаров</a></li>
     <li>
-      <a class="breadcrumbs-current">Моноподы для селфи</a>
-    </li>
+      <a class="breadcrumbs-current">Моноподы для селфи</a></li>
   </ul>
   <section class="filters">
     <h2 class="filters">Фильтр:</h2>
@@ -154,55 +141,45 @@
     </ul>
   </section>
 </main>
-  <footer class="footer-main">
-    <img src="img-logo/footer.svg" width="175" height="45" alt="Логотип магазина Device">
-  <section class="device-section-address">
+<footer class="footer-main">
+  <img src="img-logo/footer.svg" width="175" height="45" alt="Логотип магазина Device">
+  <section class="Device-section-address">
     <a> Device </a>
     <p> г.Москва , Улица строителей , 15 </p>
   </section>
-
-  <section class="footer-delivery-warranty-contact">
-    <div class="footer-delivery-warranty-Contacts">
+  <section class="footer-delivey-warranty-contact">
+    <div class="footer-deliver-warranty-Contacts">
       <ul>
         <li>
-          <a href="#">Доставка</a>
-        </li>
+          <a href="#">Доставка</a></li>
         <li>
-          <a href="#">Гарантия</a>
-        </li>
+          <a href="#">Гарантия</a></li>
         <li>
-          <a href="#">Контакты</a>
-        </li>
+          <a href="#">Контакты</a></li>
       </ul>
     </div>
-    </section>
+  </section>
   <section class="footer-social">
     <div class="footer-social">
       <ul>
         <li>
-          <a class="social-button" href="#">facebook.com</a>
-        </li>
+          <a class="social-button" href="#">facebook.com</a></li>
         <li>
-          <a class="social-button" href="#">twitter.com</a>
-        </li>
+          <a class="social-button" href="#">twitter.com</a></li>
         <li>
-          <a class="social-button" href="#">instagram.com</a>
-        </li>
+          <a class="social-button" href="#">instagram.com</a></li>
       </ul>
     </div>
-      </section>
+  </section>
   <section class="footer-user-navigation">
     <div class="footer-user-navigation">
       <ul>
         <li>
-          <a class="footer-button-login" href="#">Войти</a>
-        </li>
+          <a class="footer-button-login" href="#">Войти</a></li>
         <li>
-          <a class="footer-button-compare" href="#">Сравнить</a>
-        </li>
+          <a class="footer-button-compare" href="#">Сравнить</a></li>
         <li>
-          <a class="footer-button-basket" href="#">Корзина</a>
-        </li>
+          <a class="footer-button-basket" href="#">Корзина</a></li>
       </ul>
     </div>
     <p>Тел.:+7(495)495-95-95</p>
