--- a/index.html
+++ b/index.html
@@ -12,34 +12,25 @@
     </a>
     <ul class="user-navigation">
       <li>
-        <a href="index.html">Поиск по сайту</a>
-      </li>
+        <a href="index.html">Поиск по сайту</a></li>
       <li>
-        <a href="site-navigation.html">Найти</a>
-      </li>
+        <a href="site-navigation.html">Найти</a></li>
       <li>
-        <a href="link.html">Войти</a>>
-      </li>
+        <a href="link.html">Войти</a>></li>
       <li>
-        <a href="compare.html">Сравнить</a>>
-      </li>
+        <a href="compare.html">Сравнить</a>></li>
       <li>
-        <a href="basket.html">Корзина</a>
-      </li>
+        <a href="basket.html">Корзина</a></li>
     </ul>
     <ul class="site-navigation">
       <li>
-        <a href="catalog.html">Каталог товаров</a>
-      </li>
+        <a href="catalog.html">Каталог товаров</a></li>
       <li>
-        <a href="warranty.html">Гарантия</a>
-      </li>
+        <a href="warranty.html">Гарантия</a></li>
       <li>
-        <a href="delivery.html">Доставка</a>
-      </li>
+        <a href="delivery.html">Доставка</a></li>
       <li>
-        <a href="contacts.html">Контакты</a>
-      </li>
+        <a href="contacts.html">Контакты</a></li>
     </ul>
   </nav>
 </header>
@@ -69,23 +60,17 @@
     <nav class="main-menu-navigation">
       <ul class="catalog-list">
         <li>
-          <a href="virtual-reality">Вирутальная реальность</a>
-        </li>
+          <a href="virtual-reality">Вирутальная реальность</a></li>
         <li>
-          <a href="selfi-stick">Моноподы для селфи </a>
-        </li>
+          <a href="selfi-stick">Моноподы для селфи</a></li>
         <li>
-          <a href="camera">Экшн камеры</a>
-        </li>
+          <a href="camera">Экшн камеры</a></li>
         <li>
-          <a href="ifit">Фитнес браслеты</a>
-        </li>
+          <a href="ifit">Фитнес браслеты</a></li>
         <li>
-          <a href="iclock">Умные часы</a>
-        </li>
+          <a href="iclock">Умные часы</a></li>
         <li>
-          <a href="quadcopter">Квадрокоптеры</a>
-        </li>
+          <a href="quadcopter">Квадрокоптеры</a></li>
       </ul>
     </nav>
   </section>
@@ -93,18 +78,14 @@
     <h4>Доставка</h4>
     <ul class="delivery">
       <li>
-        <a href="delivery">Доставка</a>
-      </li>
+        <a href="delivery">Доставка</a></li>
     </ul>
     <ul class="warranty">
       <li>
-        <a href="garant">Гарантия</a>
-      </li>
+        <a href="garant">Гарантия</a></li>
     </ul>
-    <ul class="credit">
-      <li>
-        <a href="credit">Кредит</a>
-      </li>
+    <ul class="credit"><li>
+        <a href="credit">Кредит</a></li>
     </ul>
     <p> Мы с удовльствием доставим ваш товар прямо к вашему подьезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж</p>
   </section>
@@ -112,14 +93,11 @@
     <h5 class="visually-hidden-partners">Парнтеры</h5>
     <ul class="partners__list">
       <li>
-        <a class="partner-link__djj" href="#">DJJ</a>
-      </li>
+        <a class="partner-link__djj" href="#">DJJ</a></li>
       <li>
-        <a class="patrner-link__spadgets" href="#">SPAdgets</a>
-      </li>
+        <a class="patrner-link__spadgets" href="#">SPAdgets</a></li>
       <li>
-        <a class="partners-link__GoPRO" href="#">GoPRO</a>
-      </li>
+        <a class="partners-link__GoPRO" href="#">GoPRO</a></li>
       <li>
         <a class="partners-link__vive" href="#">VIVE</a><
         /li>
@@ -131,19 +109,15 @@
     <p> Мы можем доставить ваш товар в самые отдаленые точки России! Device работает со многими транспортными компаниями<p>
     <ul class="transport-comapny">
       <li>
-        <b>Деловые линии</b>
-      </li>
+        <b>Деловые линии</b></li>
       <li>
-        <b>Автотрейдинг</b>
-      </li>
+        <b>Автотрейдинг</b></li>
       <li>
-        <b>ЖелДорЭкспедиция</b>
-      </li>
+        <b>ЖелДорЭкспедиция</b></li>
     </ul>
     <ul class="about-us">
       <li>
-        <a class="about-us" href="#">Подробнее о нас</a>
-      </li>
+        <a class="about-us" href="#">Подробнее о нас</a></li>
     </ul>
   </section>
   <section class="Contacts">
@@ -152,10 +126,9 @@
     <ul class="map-index">
       <li>
         <a href="#"><img src="img/map.jpg" width="560" height="220" alt="Карта">
-        </a>
+        </a><li>
       <li>
-        <a class="write-me" href="#">Напишите нам</a>
-    </li>
+      <a class="write-me" href="#">Напишите нам</a></li>
     </ul>
   </section>
 </main>
@@ -169,14 +142,11 @@
     <div class="footer-deliver-warranty-Contacts">
       <ul>
         <li>
-          <a href="#">Доставка</a>
-        </li>
+          <a href="#">Доставка</a></li>
         <li>
-          <a href="#">Гарантия</a>
-        </li>
+          <a href="#">Гарантия</a></li>
         <li>
-          <a href="#">Контакты</a>
-        </li>
+          <a href="#">Контакты</a></li>
       </ul>
     </div>
   </section>
@@ -184,14 +154,11 @@
     <div class="footer-social">
       <ul>
         <li>
-          <a class="social-button" href="#">facebook.com</a>
-        </li>
+          <a class="social-button" href="#">facebook.com</a></li>
         <li>
-          <a class="social-button" href="#">twitter.com</a>
-        </li>
+          <a class="social-button" href="#">twitter.com</a></li>
         <li>
-          <a class="social-button" href="#">instagram.com</a>
-        </li>
+          <a class="social-button" href="#">instagram.com</a></li>
       </ul>
     </div>
   </section>
@@ -199,14 +166,11 @@
     <div class="footer-user-navigation">
       <ul>
         <li>
-          <a class="footer-button-login" href="#">Войти</a>
-        </li>
+          <a class="footer-button-login" href="#">Войти</a></li>
         <li>
-          <a class="footer-button-compare" href="#">Сравнить</a>
-        </li>
+          <a class="footer-button-compare" href="#">Сравнить</a></li>
         <li>
-          <a class="footer-button-basket" href="#">Корзина</a>
-        </li>
+          <a class="footer-button-basket" href="#">Корзина</a></li>
       </ul>
     </div>
     <p>Тел.:+7(495)495-95-95</p>
