--- a/index.html
+++ b/index.html
@@ -6,22 +6,20 @@
 </head>
 <body>
 <header class="main-header">
-  <nav class="main-navigation">
-    <a class="main-header-logo">
-      <img src="img-logo.svg" width="175" height="45" alt="Логотип магазина Device">
-    </a>
-    <ul class="user-navigation">
-      <li>
-        <a href="index.html">Поиск по сайту</a></li>
-      <li>
-        <a href="site-navigation.html">Найти</a></li>
-      <li>
-        <a href="link.html">Войти</a>></li>
-      <li>
-        <a href="compare.html">Сравнить</a>></li>
-      <li>
-        <a href="basket.html">Корзина</a></li>
-    </ul>
+  <a class="main-header-logo">
+    <img src="logo-main" width="175" height="45" alt="Логотип магазина Device">
+  </a>
+  <a href="#">Поиск по сайту</a>
+  <!-- Здесь будет форма -->
+  <ul class="user-navigation">
+    <li>
+      <a href="#">Войти</a></li>
+    <li>
+      <a href="#">Сравнить</a></li>
+    <li>
+      <a href="#">Корзина</a></li>
+  </ul>
+  <nav class="header-navigation">
     <ul class="site-navigation">
       <li>
         <a href="catalog.html">Каталог товаров</a></li>
@@ -34,80 +32,65 @@
     </ul>
   </nav>
 </header>
+
 <main class="container">
-  <h1>Делай селфи , как Бен Стиллер</h1>
+  <h2 class="visually-hidden">Селфи-палка</h2>
+  <b>Делай селфи, как Бен Стиллер</b>
+  <img src="img/selfi-stick-main.jpg" alt="Селфи-палка" height="1458" width="1152">
+  <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине.
+        Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
+      <a href="#">Подробнее</a>
   <ul class="feature-list">
-    <li>
-      <a class="feature-list">
-      <img src="selfi-stick.jpg" alt="Селфи-палка" height="500" width="450">
-    </a>
-    </li>
+  <li>Длинна палки</li>
+    <li>8,5 м</li>
+    <li>Вес палки</li>
+    <li>5 кг</li>
+    <li>Материал</li>
+    <li>Карбон</li>
   </ul>
-  <p>Самая длиная палка для селфи доступна в нашем магазине. Восемь (Восемь , Карл !) метров в длинну и 5 кг веса! </p>
-  <ul class="navigation-information">
-    <li>
-      <a href="information-about.html">Подробнее</a>
-    </li>
-  </ul>
-  <b>8,5 м</b>
-  <p>Длинна палки</p>
-  <b>5 кг</b>
-  <p>Вес палки</p>
-  <b>Карбон</b>
-  <p>Материал</p>
-  <section class="main-menu-navigation-user">
-    <h3 class="vesually-hidden">Каталог товаров</h3>
-    <nav class="main-menu-navigation">
-      <ul class="catalog-list">
+
+  <h2 class="visually-hidden">Каталог товаров</h2>
+    <ul class="catalog-list">
+      <li>
+          <a href="#">Вирутальная реальность</a></li>
         <li>
-          <a href="virtual-reality">Вирутальная реальность</a></li>
+          <a href="#">Моноподы для селфи</a></li>
         <li>
-          <a href="selfi-stick">Моноподы для селфи</a></li>
+          <a href="#">Экшн камеры</a></li>
         <li>
-          <a href="camera">Экшн камеры</a></li>
+          <a href="#">Фитнес браслеты</a></li>
         <li>
-          <a href="ifit">Фитнес браслеты</a></li>
+          <a href="#">Умные часы</a></li>
         <li>
-          <a href="iclock">Умные часы</a></li>
-        <li>
-          <a href="quadcopter">Квадрокоптеры</a></li>
+          <a href="#">Квадрокоптеры</a></li>
       </ul>
-    </nav>
-  </section>
-  <section class="delivery-warranty-credit-menu">
-    <h4>Доставка</h4>
-    <ul class="delivery">
+
+  <h2 class="visually-hidden">Доставка</h2>
+    <ul class="services">
       <li>
-        <a href="delivery">Доставка</a></li>
+        <a href="delivery">Доставка</a>
+        <p>Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно!
+          Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.</p>
+      </li>
+      <li><a href="warranty">Гарантия</a>
+      </li>
+      <li><a href="credit">Кредит</a></li>
     </ul>
-    <ul class="warranty">
-      <li>
-        <a href="garant">Гарантия</a></li>
-    </ul>
-    <ul class="credit"><li>
-        <a href="credit">Кредит</a></li>
-    </ul>
-    <p> Мы с удовльствием доставим ваш товар прямо к вашему подьезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж</p>
-  </section>
-  <section class="partners">
-    <h5 class="visually-hidden-partners">Парнтеры</h5>
-    <ul class="partners__list">
-      <li>
-        <a class="partner-link__djj" href="#">DJJ</a></li>
-      <li>
-        <a class="patrner-link__spadgets" href="#">SPAdgets</a></li>
-      <li>
-        <a class="partners-link__GoPRO" href="#">GoPRO</a></li>
-      <li>
-        <a class="partners-link__vive" href="#">VIVE</a><
-        /li>
-    </ul>
-  </section>
-  <section class="about-us">
-    <h2>О нас</h2>
-    <p> Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас </p>
-    <p> Мы можем доставить ваш товар в самые отдаленые точки России! Device работает со многими транспортными компаниями<p>
-    <ul class="transport-comapny">
+
+ <h2 class="visually-hidden">Наши партнеры</h2>
+
+   <p class="partners">
+  <a class="partners-link__djj" href="#">DJJ</a>
+  <a class="partners-link__spadgets" href="#">SPAdgets</a>
+  <a class="partners-link__GoPRO" href="#">GoPRO</a>
+  <a class="partners-link__vive" href="#">VIVE</a>
+</p>
+
+  <h2>О Нас</h2>
+  <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
+    <p>Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленые точки России!
+      Device работает со&nbsp;многими транспортными компаниями</p>
+    <ul class="transport-company">
       <li>
         <b>Деловые линии</b></li>
       <li>
@@ -115,70 +98,49 @@
       <li>
         <b>ЖелДорЭкспедиция</b></li>
     </ul>
-    <ul class="about-us">
-      <li>
-        <a class="about-us" href="#">Подробнее о нас</a></li>
-    </ul>
-  </section>
-  <section class="Contacts">
-    <h2>Контакты</h2>
-    <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-    <ul class="map-index">
-      <li>
-        <a href="#"><img src="img/map.jpg" width="560" height="220" alt="Карта">
-        </a><li>
-      <li>
-      <a class="write-me" href="#">Напишите нам</a></li>
-    </ul>
-  </section>
+        <a href="#">Подробнее о нас</a>
+
+       <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
+       <img src="img/img:map-big.png" width="460" height="320" alt="Карта">
+       <a href="#">Напишите нам</a>
 </main>
-<footer class="footer-main">
-  <img src="img-logo/footer.svg" width="175" height="45" alt="Логотип магазина Device">
-  <section class="Device-section-address">
-    <a> Device </a>
-    <p> г.Москва , Улица строителей , 15 </p>
-  </section>
-  <section class="footer-delivey-warranty-contact">
-    <div class="footer-deliver-warranty-Contacts">
-      <ul>
-        <li>
-          <a href="#">Доставка</a></li>
-        <li>
-          <a href="#">Гарантия</a></li>
-        <li>
-          <a href="#">Контакты</a></li>
-      </ul>
-    </div>
-  </section>
-  <section class="footer-social">
-    <div class="footer-social">
-      <ul>
-        <li>
-          <a class="social-button" href="#">facebook.com</a></li>
-        <li>
-          <a class="social-button" href="#">twitter.com</a></li>
-        <li>
-          <a class="social-button" href="#">instagram.com</a></li>
-      </ul>
-    </div>
-  </section>
-  <section class="footer-user-navigation">
-    <div class="footer-user-navigation">
-      <ul>
-        <li>
-          <a class="footer-button-login" href="#">Войти</a></li>
-        <li>
-          <a class="footer-button-compare" href="#">Сравнить</a></li>
-        <li>
-          <a class="footer-button-basket" href="#">Корзина</a></li>
-      </ul>
-    </div>
-    <p>Тел.:+7(495)495-95-95</p>
+
+<footer class="footer">
+  <a href="/"></a>
+  <img src="" width="175" height="45" alt="Логотип магазина Device">
+   <p class="footer__address">г.Москва , Улица строителей , 15 </p>
+   <p class="footer-social">
+     <a class="social-button" href="#">facebook.com</a>
+     <a class="social-button" href="#">twitter.com</a>
+     <a class="social-button" href="#">instagram.com</a>
+
+      </p>
+
+  <nav class="footer-navigation">
+    <ul class="site-navigation">
+      <li>
+        <a href="#">Каталог товаров</a></li>
+      <li>
+        <a href="#">Гарантия</a></li>
+      <li>
+        <a href="#">Доставка</a></li>
+      <li>
+        <a href="#">Контакты</a></li>
+    </ul>
+  </nav>
+
+  <p class="footer_user">
+    <a class="footer-button-login" href="#">Войти</a>
+    <a class="footer-button-compare" href="#">Сравнить</a>
+    <a class="footer-button-basket" href="#">Корзина</a>
+      </p>
+
+  <a href="tel">Тел.:+7(495)495-95-95</a>
     <p class="footer-copyright">
       <b>Разработано:</b>
-      <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+      <a href="https://htmlacademy.ru">HTML Academy</a>
     </p>
-  </section>
 </footer>
 </body>
 </html>
