--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,6 @@
   </a>
   <a href="#">Поиск по сайту</a>
   <!-- Здесь будет форма -->
-
   <ul class="user-navigation">
     <li>
       <a href="#">Войти</a></li>
@@ -34,7 +33,7 @@
   </nav>
 </header>
 
-<main>
+  <main class="main-page">
   <h1 class="page-title">Моноподы для селфи</h1>
   <ul class="breadcrumbs">
     <li>
@@ -44,20 +43,42 @@
     <li>
       <a class="breadcrumbs-current">Моноподы для селфи</a></li>
   </ul>
-
+  <section class="price__color">
+  <h2 class="price">Стоимость</h2>
+  <!-- Здесь будет форма -->
+   <p>От 500</p>
+    <p>До 5000</p>
     <h2 class="filters">Фильтр:</h2>
   <!-- Здесь будет форма -->
-    <h2 class="Sotring">Сортировка:</h2>
+  <b>Цвет</b>
+  <p>Черный</p>
+  <p>Белый</p>
+  <p>Синий</p>
+  <p>Красный</p>
+  <p>Розовый</p>
+  <b>Bluetooth</b>
+  <p>Есть</p>
+  <p>Нет</p>
+    <a href="btn-to-slow">Показать</a>
+    </section>
+
+    <section class="sorting">
+    <h2 class="visually-hidden">Сортировка</h2>
+    <b>Сортировка:</b>
+      <p>По цене</p>
+    <p>По типу</p>
+    <p>По популярности</p>
     <!-- Здесь будет форма -->
+</section>
 
-
+    <section class="list-product">
     <h2 class="visually-hidden">Список товаров</h2>
     <ul class="catalog-list">
       <li class="catalog-item">
         <h3>
           <a href="catalog-item.html">
-            <span class="catalog-category">Селфи-палки</span>↩
-            <span class="catalog-item-title">Любительская селфи-палка</span>↩
+            <span class="catalog-category">Селфи-палки</span>
+            <span class="catalog-item-title">Любительская селфи-палка</span>
           </a>
         </h3>
         <p class="catalog-item-image">
@@ -69,7 +90,7 @@
           <a class="button" href="#">В корзину</a></p>
       </li>
       <li class="catalog-item">
-        <h3>↩
+        <h3>
           <a href="catalog-item.html">
             <span class="catalog-category">Селфи-палки</span>
             <span class="catalog-item-title">Профессиональная селфи-палка</span>
@@ -113,7 +134,7 @@
         <p class="catalog-item-image">
           <a href="catalog-item.html">
             <img src="img/product-4.jpg" width="360" height="380"
-                 alt="Селфи палка «Следуй за мной»">↩
+                 alt="Селфи палка «Следуй за мной»">
           </a>
         </p>
         <p class="catalog-item-price">
@@ -131,17 +152,25 @@
     </ul>
     <a class="button-back-page" href="#">Назад</a>
     <a class="button-forward-page" href="#">Вперед</a>
-</main>
-<footer class="footer">
-  <a href="/"></a>
-  <img src="logo-footer.png" width="175" height="45" alt="Логотип магазина Device">
-  <p class="footer__address">г.Москва , Улица строителей , 15 </p>
-  <p class="footer-social">
-    <a class="social-button" href="#">facebook.com</a>
-    <a class="social-button" href="#">twitter.com</a>
-    <a class="social-button" href="#">instagram.com</a>
+</section>
+  </main>
 
-  </p>
+<footer class="footer">
+
+    <img src="img/map" width="175" height="45" alt="Логотип магазина Device">
+    <p class="footer__address">г.Москва , Улица строителей , 15 </p>
+    <p class="footer-social">
+      <a class="social-button" href="#">facebook.com</a>
+      <a class="social-button" href="#">twitter.com</a>
+      <a class="social-button" href="#">instagram.com</a>
+    </p>
+
+    <p class="footer_user">
+      <a class="footer-button-login" href="#">Войти</a>
+      <a class="footer-button-compare" href="#">Сравнить</a>
+      <a class="footer-button-cart" href="#">Корзина</a>
+    </p>
+
 
   <nav class="footer-navigation">
     <ul class="site-navigation">
@@ -156,17 +185,11 @@
     </ul>
   </nav>
 
-  <p class="footer_user">
-    <a class="footer-button-login" href="#">Войти</a>
-    <a class="footer-button-compare" href="#">Сравнить</a>
-    <a class="footer-button-basket" href="#">Корзина</a>
-  </p>
-
   <a href="tel">Тел.:+7(495)495-95-95</a>
-    <p class="footer-copyright">
-      <b>Разработано:</b>
-      <a href="https://htmlacademy.ru">HTML Academy</a>
-    </p>
+  <p class="footer-copyright">
+    <b>Разработано:</b>
+    <a href="https://htmlacademy.ru">HTML Academy</a>
+  </p>
 
 </footer>
 </body>
