--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   </nav>
 </header>
 
-<main class="container">
+ <main class="container">
+  <section class="main">
   <h2 class="visually-hidden">Селфи-палка</h2>
   <b>Делай селфи, как Бен Стиллер</b>
   <img src="img/selfi-stick-main.jpg" alt="Селфи-палка" height="1458" width="1152">
@@ -48,7 +49,9 @@
     <li>Материал</li>
     <li>Карбон</li>
   </ul>
+  </section>
 
+  <section class="catalog-list">
   <h2 class="visually-hidden">Каталог товаров</h2>
     <ul class="catalog-list">
       <li>
@@ -64,7 +67,9 @@
         <li>
           <a href="#">Квадрокоптеры</a></li>
       </ul>
+  </section>
 
+  <section class="service">
   <h2 class="visually-hidden">Доставка</h2>
     <ul class="services">
       <li>
@@ -76,16 +81,21 @@
       </li>
       <li><a href="credit">Кредит</a></li>
     </ul>
+  </section>
 
- <h2 class="visually-hidden">Наши партнеры</h2>
 
+
+  <section class="partners">
+    <h2 class="visually-hidden">Наши партнеры</h2>
    <p class="partners">
   <a class="partners-link__djj" href="#">DJJ</a>
   <a class="partners-link__spadgets" href="#">SPAdgets</a>
   <a class="partners-link__GoPRO" href="#">GoPRO</a>
   <a class="partners-link__vive" href="#">VIVE</a>
 </p>
+  </section>
 
+  <section class="about-us">
   <h2>О Нас</h2>
   <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
     <p>Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленые точки России!
@@ -104,18 +114,25 @@
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
        <img src="img/img:map-big.png" width="460" height="320" alt="Карта">
        <a href="#">Напишите нам</a>
+  </section>
 </main>
 
+
 <footer class="footer">
-  <a href="/"></a>
-  <img src="" width="175" height="45" alt="Логотип магазина Device">
-   <p class="footer__address">г.Москва , Улица строителей , 15 </p>
+
+<img src="img/map" width="175" height="45" alt="Логотип магазина Device">
+    <p class="footer__address">г.Москва , Улица строителей , 15 </p>
    <p class="footer-social">
      <a class="social-button" href="#">facebook.com</a>
      <a class="social-button" href="#">twitter.com</a>
      <a class="social-button" href="#">instagram.com</a>
+   </p>
 
-      </p>
+    <p class="footer_user">
+      <a class="footer-button-login" href="#">Войти</a>
+      <a class="footer-button-compare" href="#">Сравнить</a>
+      <a class="footer-button-cart" href="#">Корзина</a>
+    </p>
 
   <nav class="footer-navigation">
     <ul class="site-navigation">
@@ -130,17 +147,12 @@
     </ul>
   </nav>
 
-  <p class="footer_user">
-    <a class="footer-button-login" href="#">Войти</a>
-    <a class="footer-button-compare" href="#">Сравнить</a>
-    <a class="footer-button-basket" href="#">Корзина</a>
-      </p>
-
   <a href="tel">Тел.:+7(495)495-95-95</a>
     <p class="footer-copyright">
       <b>Разработано:</b>
       <a href="https://htmlacademy.ru">HTML Academy</a>
     </p>
+
 </footer>
 </body>
 </html>
